# Conway-s-Game-of-Life

./: CMakeLists.txt  README.md
include/: cell.hpp  game.hpp  gameplay.hpp  grid.hpp  pause.hpp  title.hpp
src/: main.cpp
src/gameplay/: game.cpp
src/grid/: clear.cpp  initalize.cpp  random.cpp  update.cpp
src/pause/: pause.cpp
src/title/: title.cpp
